--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://bonni-e.github.io/pacsdemo",
+  "homepage": "https://bonni-e.github.io/pacs-front",
   "name": "front",
   "version": "0.1.0",
   "private": true,
