Add Library Cornerstonejs (Legacy)

--- a/package.json
+++ b/package.json
@@ -4,9 +4,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@cornerstonejs/core": "^2.0.0-beta.4",
-    "@cornerstonejs/streaming-image-volume-loader": "^2.0.0-beta.4",
-    "@cornerstonejs/tools": "^2.0.0-beta.4",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@testing-library/jest-dom": "^5.17.0",
@@ -16,8 +13,14 @@
     "@types/node": "^16.18.59",
     "@types/react": "^18.2.33",
     "@types/react-dom": "^18.2.14",
+    "cornerstone-core": "^2.6.1",
+    "cornerstone-math": "^0.1.10",
+    "cornerstone-tools": "^6.0.10",
+    "cornerstone-wado-image-loader": "^4.13.2",
+    "cornerstone-web-image-loader": "^2.1.1",
     "framer-motion": "^10.16.4",
     "gh-pages": "^6.0.0",
+    "hammerjs": "^2.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
@@ -58,8 +61,13 @@
   },
   "devDependencies": {
     "@chakra-ui/react": "^2.8.1",
+    "@cornerstonejs/core": "^1.28.1",
+    "@cornerstonejs/streaming-image-volume-loader": "^1.28.1",
+    "@cornerstonejs/tools": "^1.28.1",
+    "@types/cornerstone-core": "^2.3.3",
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.29",
+    "crypto-browserify": "^3.12.0",
     "dicom-parser": "^1.8.21"
   }
 }
