--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@cornerstonejs/dicom-image-loader": "^1.28.2",
+    "@cornerstonejs/streaming-image-volume-loader": "^1.28.3",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@testing-library/jest-dom": "^5.17.0",
@@ -21,6 +23,7 @@
     "framer-motion": "^10.16.4",
     "gh-pages": "^6.0.0",
     "hammerjs": "^2.0.8",
+    "jpeg-lossless-decoder-js": "^2.0.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
@@ -60,14 +63,14 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@chakra-ui/react": "^2.8.1",
     "@cornerstonejs/core": "^1.28.1",
-    "@cornerstonejs/streaming-image-volume-loader": "^1.28.1",
     "@cornerstonejs/tools": "^1.28.1",
     "@types/cornerstone-core": "^2.3.3",
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.29",
-    "crypto-browserify": "^3.12.0",
+    "babel-preset-react-app": "^10.0.1",
     "dicom-parser": "^1.8.21"
   }
 }
