--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "@types/node": "^16.18.59",
     "@types/react": "^18.2.33",
     "@types/react-dom": "^18.2.14",
+    "cornerstone-math": "^0.1.10",
     "framer-motion": "^10.16.4",
     "gh-pages": "^6.0.0",
+    "hammerjs": "^2.0.8",
     "react": "^18.2.0",
+    "react-cornerstone-viewport": "^4.1.5",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-query": "^3.39.3",
